:liptsick: fix safari timer input visibility

--- a/elements/timer/index.css
+++ b/elements/timer/index.css
@@ -69,15 +69,21 @@ p {
   font-weight: 700;
   font-family: "Quicksand", sans-serif;
   text-align: center;
-  height: 110px;
   width: 156px;
-  padding-bottom: 6px;
   border: none;
   caret-color: #9e32d6;
 }
 
+p {
+  height: 110px;
+  padding-bottom: 24px;
+}
+
 input {
   text-align: right;
+  text-align: right;
+  line-height: 1.2em;
+  height: 1.2em;
 }
 
 input::-webkit-outer-spin-button,
@@ -97,6 +103,7 @@ input:hover:not(:disabled) {
   display: flex;
   align-items: flex-end;
   padding-top: 18px;
+  margin-bottom: -24px;
 }
 
 .buttons-group {
@@ -171,8 +178,10 @@ input:hover:not(:disabled) {
   input,
   p {
     font-size: 80px;
-    height: 70px;
     width: 100px;
+  }
+  p {
+    height: 70px;
   }
   .timer p {
     height: 80px;
@@ -193,8 +202,11 @@ input:hover:not(:disabled) {
   input,
   p {
     font-size: 55px;
-    height: 50px;
+
     width: 70px;
+  }
+  p {
+    height: 50px;
   }
 
   .buttons-group {
